Hide image working area by default. Try to fix an issue with buttons on iOS

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ body {
     margin: 0;
 }
 
+button {
+    -webkit-appearance: button;
+}
+
 .floating {
     touch-action: manipulation;
     width: 100%;
@@ -18,7 +22,7 @@ body {
 }
 
 #image-working-area {
-    # display: none;
+    display: none;
 }
 
 #floating-block {
